@@ -67,14 +67,6 @@ namespace MySql.Data.MySqlClient
             set { base.DataAdapter = value; }
         }
 
-        private char ParameterMarker
-        {
-            get
-            {
-                return (DataAdapter.SelectCommand.Connection as MySqlConnection).ParameterMarker;
-            }
-        }
-
         /// <summary>
         /// Indicates whether the command builder should generate a SELECT statement
         /// to populate any autogenerated fields.  We provide this property rather
@@ -203,8 +195,7 @@ namespace MySql.Data.MySqlClient
             sb.Replace("<", "_lt_");
             sb.Replace(">", "_gt_");
             sb.Replace(".", "_pt_");
-            return String.Format("{0}{1}",
-                ParameterMarker, sb.ToString());
+            return String.Format("@{0}", sb.ToString());
         }
 
         protected override DbCommand InitializeCommand(DbCommand command)
@@ -221,14 +212,12 @@ namespace MySql.Data.MySqlClient
 
         protected override string GetParameterName(int parameterOrdinal)
         {
-            return String.Format("{0}p{1}", ParameterMarker,
-                parameterOrdinal.ToString(CultureInfo.InvariantCulture));
+            return String.Format("@p{0}", parameterOrdinal.ToString(CultureInfo.InvariantCulture));
         }
 
         protected override string GetParameterPlaceholder(int parameterOrdinal)
         {
-            return String.Format("{0}p{1}", ParameterMarker,
-                parameterOrdinal.ToString(CultureInfo.InvariantCulture));
+            return String.Format("@p{0}", parameterOrdinal.ToString(CultureInfo.InvariantCulture));
         }
 
         protected override void SetRowUpdatingHandler(DbDataAdapter adapter)
